--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -53,7 +53,7 @@
     <a class="btn btn-primary btn-block"
        ng-click="model.deleteUser(model.user)">Deactivate Account</a>
     <a class="btn btn-danger  btn-block"
-       ng-click="model.logout(model.user)">Logout</a>
+       href="#/login">Logout</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
