--- a/public/project/css/Header-Nightsky.css
+++ b/public/project/css/Header-Nightsky.css
@@ -12,8 +12,11 @@ body {
 
 .header-nightsky .navbar-nav>li>a {
     color: white;
-    font-size: 18px;
+    font-size: 30px;
     border-radius: 10px;
+    font-weight: bold;
+    font-family: "Bradley Hand ITC";
+    margin-top: 20px;
 }
 
 .header-nightsky .navbar {
@@ -61,8 +64,10 @@ body {
 
 .header-nightsky .navbar-brand {
     color: white;
-    font-size: 50px;
-    margin-top: 10px;
+    font-size: 60px;
+    font-weight: bold;
+    font-family: "Bradley Hand ITC";
+    margin-top: 20px;
     margin-bottom: 10px;
 }
 
