--- a/public/project/views/admin/templates/admin.view.client.html
+++ b/public/project/views/admin/templates/admin.view.client.html
@@ -56,10 +56,10 @@
                 <div class="col-xs-3 table-responsive">
 
                     <table class="table">
-                        <tr ><th>First Name: </th><td> <input ng-model="model.user.firstName" type="text" class="form-control" id="first-name" ></td></tr>
-                        <tr> <th> Last Name:</th><td>  <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name" ></td></tr>
-                        <tr > <th> Username :</th><td> <input ng-model="model.user.username" type="text" class="form-control" id="username" ></td></tr>
-                        <tr> <th>Password :</th><td> <input ng-model="model.user.password" type="text" class="form-control" id="password" ></td></tr>
+                        <tr ><th>First Name </th><td> <input ng-model="model.user.firstName" type="text" class="form-control" id="first-name" ></td></tr>
+                        <tr> <th> Last Name</th><td>  <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name" ></td></tr>
+                        <tr > <th> Username</th><td> <input ng-model="model.user.username" type="text" class="form-control" id="username" ></td></tr>
+                        <tr> <th>Password</th><td> <input ng-model="model.user.password" type="text" class="form-control" id="password" ></td></tr>
                     </table>
 
                     </br>
@@ -68,10 +68,10 @@
                 <div class="col-xs-3 table-responsive">
 
                     <table class="table">
-                        <tr ><th>Email: </th><td> <input ng-model="model.user.email" type="text" class="form-control"  ></td></tr>
-                        <tr > <th> City:</th><td>  <input ng-model="model.user.city" type="text" class="form-control"  ></td></tr>
-                        <tr> <th> About :</th><td> <textarea ng-model="model.user.about" type="text" class="form-control"></textarea> </td></tr>
-                        <tr><th>Gender : </th>
+                        <tr ><th>Email </th><td> <input ng-model="model.user.email" type="text" class="form-control"  ></td></tr>
+                        <tr > <th> City</th><td>  <input ng-model="model.user.city" type="text" class="form-control"  ></td></tr>
+                        <tr> <th> About</th><td> <textarea ng-model="model.user.about" type="text" class="form-control"></textarea> </td></tr>
+                        <tr><th>Gender </th>
                             <td>
                                 <form>
                             <span class="radio">
@@ -86,7 +86,7 @@
                         </tr>
 
                         <tr>
-                            <th>Role : </th>
+                            <th>Role </th>
                             <td>
                                 <form>
                             <span class="radio">
@@ -109,7 +109,7 @@
                 <div class="col-xs-3 table-responsive">
 
                     <table class="table">
-                        <tr><th>Following: </th>
+                        <tr><th>Following </th>
                             <td>
                                 <textarea ng-model="model.user.following" type="text" class="form-control"  rows=9></textarea>
                             </td>
