--- a/public/project/views/user/templates/album.view.client.html
+++ b/public/project/views/user/templates/album.view.client.html
@@ -1,60 +1,62 @@
-<div id="bg1">
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="header-nightsky">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <a class="btn btn-success" href="#/"></a>
-                <a  class="navbar-brand" href="#/user/model.userId/home">Muse</a>
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+<div id="bg1"><
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="header-nightsky">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-text pull-left">
+                        <a href="#/user/model.userId/home">
+                            <span style="font-size: 50px; color:white"class="glyphicon glyphicon-chevron-left "></span>
+                        </a>
+                    </div>
+                    <a  class="navbar-brand" href="#/user/model.userId/home">Muse</a>
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
 
+                    </div>
+
+
+                    <div class="collapse navbar-collapse" id="myNavbar">
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li ng-if="model.logged == true"><a href="#/user/profile"  >PROFILE</a></li>
+
+                            <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >LOGOUT</a></li>
+                            <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+
+                                    <li><a href="" ng-click="model.logout()" >Logout</a></li>
+
+                                </ul>
+                            </li>
+
+                            <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
+                            <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
+                            <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+
+                                    <li ><a href="#/signup"  >Sign Up</a></li>
+                                    <li ><a href="#/login"  >Login</a></li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </nav></div>
+    </nav>
 
 
-                <div class="collapse navbar-collapse" id="myNavbar">
 
-                    <ul class="nav navbar-nav navbar-right">
-
-
-                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
-                        <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-
-                                <li><a href="" ng-click="model.logout()" >Logout</a></li>
-
-                            </ul>
-                        </li>
-
-                        <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
-                        <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
-                        <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-
-                                <li ><a href="# /signup"  >Sign Up</a></li>
-                                <li ><a href="#/login"  >Login</a></li>
-
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-</nav>
-
-
-<div>
-
-    <div class="container" id="top-pad" >
+    <div class="container" id="top-pad-album" >
         <div class="container">
         <img id="album-img"  class="img-responsive col-xs-6"class="pull-right"src="{{model.album.images[1].url}}"></img>
-            <div class="col-xs-6">
+            <div class="col-xs-12">
         <p class="h2 text-sm-center" style="color:brown">{{model.album.name}}</p>
 
         <span ng-repeat="artist in model.album.artists">
@@ -69,7 +71,7 @@
 
 
     <div  class="col-xs-12 col-lg-4" >
-        <li>
+        <li style='color: white;'>
    <label style="color:white">{{track.name}}</label>
         </li>
 
@@ -79,11 +81,14 @@
         <div  class="col-xs-12 col-lg-8">
 
 
-            <audio id= "yourAudio" controls  >
+            <audio class="col-xs-12 col-lg-5" id= "yourAudio" controls  >
 
                 <source src={{model.trust(track["preview_url"])}}>
             </audio>
             </div>
+            </ol>
 
 
     </div>
+        </div>
+</div>
