--- a/public/project/views/user/templates/home.view.client.html
+++ b/public/project/views/user/templates/home.view.client.html
@@ -17,9 +17,10 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li ng-if="model.logged == true"><a href="#/user/profile"  >Profile</a></li>
+                        <li ng-if="model.user.role == 'admin'" > <a href="#/admin">ADMIN</a></li>
+                        <li ng-if="model.logged == true"><a href="#/user/profile"  >PROFILE</a></li>
 
-                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
+                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >LOGOUT</a></li>
                         <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -29,8 +30,8 @@
                             </ul>
                         </li>
 
-                        <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
-                        <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
+                        <li ng-if="model.logged == false"><a href="#/signup"  >SIGN UP</a></li>
+                        <li ng-if="model.logged == false"><a href="#/login"  >LOGIN</a></li>
                         <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -118,7 +119,7 @@
 
 
                     <div id="top-pad" class="container"  ng-switch-when="album"   ng-repeat="result in model.searchResults.albums.items">
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-lg-6">
 
                                 <div id="top-pad-1">
                                     <img class="img-responsive" ng-src="{{result.images[0].url}}"></img></div>
@@ -140,7 +141,8 @@
                     <div class="col-xs-12 col-lg-6">
                         <div class="container">
 
-                                    <div ng-if="model.logged == true && model.spotifyIdList.indexOf(result.id) == -1" > <button id="audioControl" class="btn btn-success" type="submit"
+                                    <div ng-if="model.logged == true && model.spotifyIdList.indexOf(result.id) == -1" >
+                                            <button id="audioControl" class="btn btn-success" type="submit"
                                                    ng-click="model.addToPlaylist(result.id,result.name,result.artists,result.album.name)">Add to Favorites</button>
 </div>
                             <div>
@@ -148,7 +150,7 @@
                                                         </div>
                             <div class="text-sm-center" >
 
-                                <audio id= "yourAudio"  controls>
+                                <audio  id= "yourAudio"  controls>
 
                                     <source src={{model.trust(result["preview_url"])}}>
                                 </audio>
@@ -194,9 +196,10 @@
 
             <div ng-if="model.logged == true && model.searchFlag == false">
 
-            <h1 id="top-pad-5" style="font-weight: bold;color:darkgray" class="h1 container-fluid text-center"> Popular Now</h1>
+
             <div id="top-pad" class="container">
-                <div class="col-lg-7 col-xs-6">
+                <div class="col-lg-7 col-xs-12">
+                    <h1 id="top-pad-5" style="font-weight: bold;color:darkgray" class="h1 container-fluid"> Popular Now</h1>
 
                 <div  ng-repeat="track in model.topTracks.tracks.track">
 
@@ -218,7 +221,7 @@
                         </br>
                     </div>
                     </div>
-                <div class="col-lg-5 col-xs-6">
+                <div class="col-lg-5 col-xs-12">
                     <h2 style="color:whitesmoke">Find friends</h2>
 
                     <div class="input-group input-group-lg">
