--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -3,7 +3,7 @@
     <div class="header-nightsky">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <a  class="navbar-brand" href="#/user/model.userId/home">Muse</a>
+                <a  class="navbar-brand" href="#/user/model.userId/home">Home</a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
@@ -175,13 +175,13 @@
                                 You are following {{model.following.length}} people.
 
                                     <div  class="container" ng-repeat="following in model.following">
-                                        <span >
+                                        <span class="col-xs-5  col-lg-3">
                                  <a href="#/user/{{model.user._id}}/friends/{{following._id}}">
                                      {{following.firstName}} {{following.lastName}}</a>
                                             </span>
-<span>
+<span  class="col-xs-3 col-lg-5" >
 
-                <button  class="btn btn-success" ng-click="model.unfollow(following._id)">Unfollow</button>
+                <button  style="width:70px; height:25px" class="btn btn-success" ng-click="model.unfollow(following._id)">Unfollow</button>
 
 </span>
 
