--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -52,8 +52,8 @@
                         allowfullscreen></iframe>
                 <!--  {{widget.width}}-->
             </div>
-            <div ng-switch-when="HTML" >
-               <div ng-bind-html="model.doYouTrustHtml(widget.text)"></div>
+            <div ng-switch-when="HTML" ng-bind-html="model.doYouTrustHtml(widget.text)">
+                {{widget.text}}
 
             </div>
 
