--- a/public/project/views/user/templates/login.view.client.html
+++ b/public/project/views/user/templates/login.view.client.html
@@ -41,7 +41,7 @@
         </nav></div>
 </nav>
 
-<div id="top-pad" class="container">
+<div id="top-pad-album" class="container">
 
     <div ng-show="model.message" class="alert alert-success" role="alert">
         <!--ng-show shows this div only if model.error has some value-->
@@ -51,7 +51,9 @@
         <!--ng-show shows this div only if model.error has some value-->
         {{model.error}}
     </div>
-    <div id="top-pad-5" >
+    </div>
+
+    <div id="top-pad-5" class="container" >
         <h1 style="font-family:'Bradley Hand ITC' ;font-weight: bold;font-size:50px ">Login</h1>
 
 
@@ -72,7 +74,7 @@
 
 </div>
 
-    </div>
+
 
 
 
